external-crates/move/crates/move-compiler/tests/move_2024/matching/invalid_at.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: 2024.alpha
  lint: false
---
error[E04036]: non-exhaustive pattern
  ┌─ tests/move_2024/matching/invalid_at.move:8:16
  │
8 │         match (opt) {
  │                ^^^ Pattern '_' not covered

error[E01002]: unexpected token
  ┌─ tests/move_2024/matching/invalid_at.move:9:13
  │
9 │             _ @ Option::Some(128u8) => (),
  │             ^ Cannot use '_' as a binder in an '@' pattern
